# django-db-readonly

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yaml
readonly/: __init__.py  context_processors.py  cursor.py  exceptions.py  middleware.py
script/: test
tests/: context_processors_test.py  cursor_test.py  settings.py
