[tool.poetry]
name = "django-db-readonly"
version = "0.1.1"
description = "Add a global database read-only setting."
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "readonly"}]

[tool.poetry.dependencies]
python = "^3.8.1"
django = [
	{ version = ">=1.9 <5.0", python = "<3.10" },
	{ version = "^5.0", python = "^3.10" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.9.0"
flake8 = "^7.1.1"
flake8-zale = "^0.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
